# Neon

./: .gitignore  .gitmodules  CMakeLists.txt  Neon.sln  README.md  imgui.ini  premake5.lua
Neon/: Neon.vcxproj  Neon.vcxproj.filters
Neon/src/: Application.cpp  Application.h  Sandbox3D.cpp  neopch.h
NeonEditor/: imgui.ini
NeonEditor/models/: Handgun_obj.mtl  skybox.mtl  wuson.mtl
Sandbox/: Sandbox.vcxproj  Sandbox.vcxproj.filters  imgui.ini
Sandbox/models/: plane.mtl
Sandbox/src/: Sandbox3D.cpp  Sandbox3D.h  SandboxApp.cpp
models/: plane.mtl  sphere.mtl
src/: Application.cpp  Application.h  Sandbox3D.cpp  Sandbox3D.h  main.cpp  neopch.h  vkpch.cpp  vkpch.h
src/Core/: Allocator.cpp  Allocator.h  Core.h  ImGuiLayer.cpp  ImGuiLayer.h  Input.cpp  Input.h  Layer.cpp  Layer.h  LayerStack.cpp  LayerStack.h
src/Event/: ApplicationEvent.h  Event.h  KeyEvent.h
src/Renderer/: Context.cpp  Context.h  DescriptorPool.cpp  DescriptorPool.h  DescriptorSet.cpp  DescriptorSet.h  DescriptorSetType.cpp  DescriptorSetType.h  GraphicsPipeline.cpp  GraphicsPipeline.h  LogicalDevice.cpp  LogicalDevice.h  ObjModel.cpp  ObjModel.h  PerspectiveCamera.cpp  PerspectiveCamera.h  PerspectiveCameraController.cpp  PerspectiveCameraController.h  PhysicalDevice.cpp  PhysicalDevice.h  RenderPass.cpp  RenderPass.h  SwapChain.cpp  SwapChain.h  VulkanRenderer.cpp  VulkanRenderer.h  VulkanShader.cpp  VulkanShader.h
src/Scene/: Bone.cpp  Bone.h  Components.cpp  Components.h  Entity.cpp  Entity.h  Scene.cpp  Scene.h
src/Shaders/: animation_vert.spv  compile.bat  frag.spv  frag_post.spv  frag_skydome.spv  frag_terrain.spv  material.glsl  shader_frag.frag  shader_frag_skydome.frag  shader_frag_terrain.frag  shader_post_frag.frag  shader_vert.vert  shader_vert_animation.vert  vert.spv  (+4 more)
textures/: birchwood_16k.hdr
(+138 files in other folders)
